bindings/java/src/main/java/whiteout/utils/internal/Native.java

// SPDX-License-Identifier: BSD-3-Clause
// AUTOGENERATED by tools/codegen/emit_java.py - do not edit.
package whiteout.utils.internal;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import whiteout.common.internal.NativeCommon;

/** FFM MethodHandle registry for this module. Internal — for codegen use. */
public final class Native {
    private Native() {}

    public static final MemoryLayout BYTES_LAYOUT = NativeCommon.BYTES_LAYOUT;
    public static final MemoryLayout CSTRING_LAYOUT = NativeCommon.CSTRING_LAYOUT;
    public static final MethodHandle whiteout_Bytes_free = NativeCommon.whiteout_Bytes_free;
    public static final MethodHandle whiteout_CString_free = NativeCommon.whiteout_CString_free;

    static MethodHandle find(String name, FunctionDescriptor fd) {
        return NativeCommon.find(name, fd);
    }

    // -- UtilsVertexBuffer --
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_new = find(
        "whiteout_utils_UtilsVertexBuffer_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_delete = find(
        "whiteout_utils_UtilsVertexBuffer_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_vertexCount = find(
        "whiteout_utils_UtilsVertexBuffer_vertexCount", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_vertexSize = find(
        "whiteout_utils_UtilsVertexBuffer_vertexSize", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_UVsNum = find(
        "whiteout_utils_UtilsVertexBuffer_UVsNum", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_hasVertexColors = find(
        "whiteout_utils_UtilsVertexBuffer_hasVertexColors", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_get_data_count = find("whiteout_utils_UtilsVertexBuffer_get_data_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_resize_data = find("whiteout_utils_UtilsVertexBuffer_resize_data", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_get_data_data = find("whiteout_utils_UtilsVertexBuffer_get_data_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_assign_data = find("whiteout_utils_UtilsVertexBuffer_assign_data", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_get_layout_count = find("whiteout_utils_UtilsVertexBuffer_get_layout_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_resize_layout = find("whiteout_utils_UtilsVertexBuffer_resize_layout", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_get_layout_at = find("whiteout_utils_UtilsVertexBuffer_get_layout_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_get_vertex_stride = find("whiteout_utils_UtilsVertexBuffer_get_vertex_stride", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBuffer_set_vertex_stride = find("whiteout_utils_UtilsVertexBuffer_set_vertex_stride", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- UtilsVertexBufferAttribute --
    public static final MethodHandle whiteout_utils_UtilsVertexBufferAttribute_new = find(
        "whiteout_utils_UtilsVertexBufferAttribute_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferAttribute_delete = find(
        "whiteout_utils_UtilsVertexBufferAttribute_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferAttribute_get_attr_class = find("whiteout_utils_UtilsVertexBufferAttribute_get_attr_class", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferAttribute_set_attr_class = find("whiteout_utils_UtilsVertexBufferAttribute_set_attr_class", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferAttribute_get_encoding = find("whiteout_utils_UtilsVertexBufferAttribute_get_encoding", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferAttribute_set_encoding = find("whiteout_utils_UtilsVertexBufferAttribute_set_encoding", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferAttribute_get_component_count = find("whiteout_utils_UtilsVertexBufferAttribute_get_component_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferAttribute_set_component_count = find("whiteout_utils_UtilsVertexBufferAttribute_set_component_count", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferAttribute_get_offset = find("whiteout_utils_UtilsVertexBufferAttribute_get_offset", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferAttribute_set_offset = find("whiteout_utils_UtilsVertexBufferAttribute_set_offset", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));

    // -- UtilsVertexBufferBuilder --
    public static final MethodHandle whiteout_utils_UtilsVertexBufferBuilder_new = find(
        "whiteout_utils_UtilsVertexBufferBuilder_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferBuilder_delete = find(
        "whiteout_utils_UtilsVertexBufferBuilder_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferBuilder_declareFloatAttribute = find(
        "whiteout_utils_UtilsVertexBufferBuilder_declareFloatAttribute", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferBuilder_declareIntAttribute = find(
        "whiteout_utils_UtilsVertexBufferBuilder_declareIntAttribute", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_utils_UtilsVertexBufferBuilder_build = find(
        "whiteout_utils_UtilsVertexBufferBuilder_build", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

}
